# Senior-Design

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
assets/biography/: toan.md
backend/: Dockerfile  create_data.py  requirements.txt
backend/app/: deps.py  main.py  simple_cli_demo.py
backend/rag/: chat_engine.py  index.py  ingest.py
backend/utils/: preprocess.py  setup_config.py
configs/: dev.yaml  paths.yaml  secrets.env.example
docs/: Constraint_Essay.md  Effort_Matrix.md  Fall_Meeting_Notes.md  Hour_Overview.md  Meeting_Notes.md  Milestones.md  Project-Description.md  Project_Description.md  README.md  Tasklist.md  Team_Contract.md  Test_Plan.docx  Timeline.md  User_Guide.md  User_Stories.md
docs/assessments/: Constraint_Essay.md
docs/biography/: Daniel_Lindsey_Professional_Biography.md  toan.md  toan_ly.md
docs/design_diagrams/: description.md
docs/essays/: Daniel_Lindsey_Individual_Capstone_Assessment.docx  Daniel_Lindsey_Individual_Capstone_Assessment.md  Toan_Ly_Individual_Capstone_Assessment.md
docs/project_hours/: Daniel_Lindsey_Hours_Justification.md  Hour_Overview.md  Toan_Ly_Hours_Justification.md
docs/self_assessment/: Toan_Ly_Self_Assessment.md
docs/testing/: Test_Plan.docx  (+1 more)
evaluation/: evaluation.py
frontend/: 1_🏠_Home_page.py  Dockerfile  app.py  🏠_Home_page.py
notebooks/: README.md  indexing.ipynb  ingesting_data.ipynb  llamaindex.ipynb
prompts/: agent_system_template.txt  summary_extract.txt
src/: create_data.py
(+39 files in other folders)
