[project]
name = "mental-health-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.5",
    "docx2txt==0.8",
    "fastapi>=0.116.1",
    "llama-index==0.11.4",
    "llama-index-extractors-entity==0.2.0",
    "llama-index-readers-web==0.2.2",
    "llama-index-vector-stores-chroma==0.2.0",
    "plotly==5.24.0",
    "pyyaml>=6.0.2",
    "streamlit==1.38.0",
    "transformers==4.40.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
