[project]
name = "mental-health-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.5",
    "docx2txt==0.8",
    "fastapi>=0.116.1",
    "fastembed>=0.4.2",
    "jose>=1.0.0",
    "llama-index-agent-openai>=0.4.12,<0.5",
    "llama-index-core==0.12.52.post1",
    "llama-index-embeddings-openai>=0.3,<0.4",
    "llama-index-llms-openai==0.4.7",
    "llama-index-vector-stores-qdrant==0.4.3",
    "passlib>=1.7.4",
    "plotly==5.24.0",
    "psycopg[binary]>=3.3.3",
    "pymupdf4llm>=0.3.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.12.1",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.43",
    "streamlit==1.38.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
